Bug 1682932 - ensure sAutoMemoryCacheCapacity is properly synchronized. r=valentin,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D100027